Fix navigation item spacing on tablet and up

--- a/index.css
+++ b/index.css
@@ -942,6 +942,7 @@ ul {
 
   #nav-menu {
     flex-direction: row !important;
+    gap: 2rem;
   }
 
   #nav-menu a {
